# ml-api-template

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  event_handlers.py  middlewares.py  settings.py  setup_logger.py
app/routes/: __init__.py  sample_route.py
tests/: conftest.py
tests/test_api/: test_random.py
