[tool.poetry]
name = "api_template"
version = "0.1.0"
description = "Machine Learning project template"
authors = ["Cyuss <maamra.youcef@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"
numpy = "^1.19.1"
loguru = "^0.5.1"
requests = "^2.24.0"
uvicorn = "^0.11.8"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-mock = "^3.2.0"
pytest-cov = "^2.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
